# CUDA-Inference-Engine

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
benchmarks/: run_benchmark.py
engine/: transformer.cu  weight_loader.cpp  weight_loader.h
kernels/: activation.cu  attention.cu  gemm.cu  norm.cu
tests/: test_kernels.py  test_phase2.py
